<resources>
    <string name="pref_acra_syslog">Send crash reports</string>
    <string name="pref_acra_syslog_summary">If application crashes, information will be sent to developers.</string>
    
    <string name="progress_time_remaining">Time remaining: %ds</string>
    <string name="admob_publisher_id" translatable="false">a151152bea7fb1b</string>

    <string name="menu_buypro">Buy PRO</string>
    <string name="menu_rateapp">Rate this app</string>
    
    <string name="toast_camera_not_supported">Camera is not supported by this device.</string>
    <string name="toast_error_opening_file">Error opening file. Try another file manager.</string>
    <string name="toast_file_not_found">File not found. Try another file manager.</string>
    <string name="toast_error_creating_file">Error creating file. Try another file manager.</string>
    <string name="toast_out_of_memory">Out of memory. Try to clear RAM.</string>
    <string name="toast_error_deleting_file">Error deleting file</string>
    <string name="intent_content_method" translatable="false">tk.standy66.deblurit.GET_CONTENT_METHOD</string>
    <string name="welcome_takephoto">Take photo</string>
    <string name="welcome_open">Open file</string>
    <string name="welcome_previous">Previous</string>
    <string name="app_name" translatable="false">DeblurIt Pro</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_close">Close</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_open">Open</string>
    <string name="menu_takephoto">Take photo</string>
    <string name="title_unsharp_preview_activity" translatable="false">DeblurIt Pro</string>
    <string name="title_deconvolution_preview_activity" translatable="false">DeblurIt Pro</string>
    <string name="title_progress_activity">In progress</string>
    <string name="title_finish_activity">Finish</string>
    <string name="title_prefernces_activity">Settings</string>
    <string name="title_help_activity">Help</string>
    <string name="subtitle_unsharp_preview_activity">Unsharp mask</string>
    <string name="subtitle_deconvolution_preview_activity">Deconvolution</string>
    <string name="subtitle_progress_activity">Crunching numbers</string>
    <string name="subtitle_finish_activity">You\'re almost done!</string>
    <string name="subtitle_help_activity">Help</string>
    <string name="description_progress_activity">Feel free to close this window. You will be notified, when it\'s done.</string>
    <string name="description_finish_activity">Click on thumbnail to save and open the image, or choose save from drop-down menu.</string>
    <string name="preview_label_radius">Radius</string>
    <string name="preview_label_strength">Strength</string>
    <string name="preview_checkbox_grayscale">Grayscale</string>
    <string name="preview_button_preview">Preview</string>
    <string name="preview_button_process">Process</string>
    <string name="preview_label_type">Blur type</string>
    <string name="preview_label_angle">Angle</string>
    <string name="preview_label_length">Length</string>
    <string name="preview_label_smoothness">Smooth</string>
    <string name="shared_preferences_name" translatable="false">tk.standy66.deblurit.SHARED_PREFERENCES</string>
    <string name="global_settings_preferences_name" translatable="false">tk.standy66.deblurit_preferences</string>
    <string name="session_settings_preferences_name" translatable="false">tk.standy66.deblurit.tools.SessionSettings_PREFERENCES</string>
    <string name="key_save_path" translatable="false">tk.standy66.deblurit.tools.GlobalSettings_SAVE_PATH</string>
    <string name="key_max_output" translatable="false">tk.standy66.deblurit.tools.GlobalSettings_MAX_OUTPUT_SIZE</string>
    <string name="key_format" translatable="false">tk.standy66.deblurit.tools.GlobalSettings_FORMAT</string>
    <string name="mode" translatable="false">tk.standy66.deblurit.tools.GlobalSettings_MODE</string>
    <string name="constant_zero" translatable="false">0</string>
    <string name="preview_max_radius_value" translatable="false">1000</string>
    <string name="preview_max_length_value" translatable="false">1000</string>
    <string name="name_save_path_preference">Save path</string>
    <string name="name_max_output_preference">Maximum output size</string>
    <string name="name_format_preference">Output format</string>
    <string name="name_mode">Processing mode</string>
    <string name="notif_processing_title">Processing</string>
    <string name="notif_ready_description">The image is ready!</string>
    <string name="summary_save_path">New images are saved to %s</string>
    <string name="summary_max_output">Images larger than %0$sx%0$s will be downscaled</string>
    <string name="summary_format" translatable="false">%s</string>
    <string name="summary_mode" translatable="false">%s</string>
    
    <string name="mode_dialog_text">Select mode (can be changed in settings)</string>
    <string name="mode_dialog_manual">Manual (Remove large defects)</string>
    <string name="mode_dialog_auto">Auto (Remove small defects)</string>
    
    <string name="finish_button_save">Save</string>
    <string name="finish_button_delete">Delete</string>
    
    <!-- ACRA -->
    <string name="crash_toast_text">Ooooops ! I crashed, but a report has been sent to my developer to help fix the issue !</string>
    <string name="crash_dialog_title">DeblurIt has crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the
    application to stop. Please help us fix this by sending us error data,
    all you have to do is click OK.</string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="crash_dialog_ok_toast">Thank you !</string>
    <string name="title_activity_feedback">Send feedback</string>
    <string name="feedback_hint_email">E-Mail</string>
    <string name="feedback_hint_name">Name</string>
    <string name="feedback_hint_message">Message</string>
    <string name="feedback_button_send">Send</string>
    <string name="feedback_button_discard">Discard</string>
    <string name="feedback_type_desciption">Choose feedback type</string>
    <string name="feedback_send_toast">Thank you</string>
    <string name="title_activity_about">About this app</string>
    <string name="about_name" translatable="false">DeblurIt Pro</string>
    <string name="about_version">Version 1.5.0</string>
    <string name="about_copyright">Copyright 2016 Andrew Stepanov</string>
    <string name="about_description">This application uses software under APACHE License (ActionBarSherlock, ACRA, JSSEProvider), CDDL-1.0 License(javamail-android). Some assets is licensed under Creative Commons Attribution 3.0 Unported License.  You can find third party licensing informationg by clicking the button below.</string>
    <string name="about_thirdparty_button">Third party information</string>
    <string name="title_activity_text_viewer">Third party licenses</string>
    <string name="textviewver_button_ok">OK</string>
    <string name="textviewver_loading">Loading&#8230;</string>
    <string name="preview_chooser_title">Choose picture</string>
    <string name="title_activity_welcome" translatable="false">DeblurIt Pro</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="help_message"><![CDATA[
        This program uses 2 different filters to make your pictures better.<p>
        Unsharp mask filter is the best fit for small defects. <br>
        Deconvolution filter uses progressive algorithms to remove large defects.<p>
        This filters need PSF to sharpen images. PSF is a recipe of how the focused image turns into a blurred one. PSF looks just like image:<p>
<img src="circle"/><p>
You can select the type of PSF and change its basic setting (like radius, length, angle) by manipulating appropriate seek bars.<p> Preview button generates thumbnail that shows how the result may look like. By default, resulting images are saved to /sdcard/Pictures/DeblurIt/ folder.
        
    ]]></string>
    <string name="about_website" translatable="false">http://standy.me</string>
    <string name="take_photo_error">Error while taking picture, try again later</string>
    <string name="finish_saved_toast">Saved</string>
    <string name="notification_processing_label">Image is processing</string>
    <string name="notification_processing_text">Progress: </string>
    <string name="notification_ready_label">Image is ready</string>
    <string name="notification_ready_text">Touch to open</string>
    <string name="finish_save_permission_denied_toast">Couldn\'t save to gallery without permission!</string>
    <string name="time_remaining_unknown">Time remaining: unknown</string>

</resources>
