<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <EditText
        android:id="@+id/field_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/feedback_hint_name"
        android:inputType="textNoSuggestions" />

    <EditText
        android:id="@+id/field_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/feedback_hint_email"
        android:inputType="textEmailAddress" />
    
    <Spinner  
        android:id="@+id/spinner_bugtype"
        android:layout_height="wrap_content"
        android:prompt="@string/feedback_type_desciption"
        android:layout_width="fill_parent"
        android:entries="@array/feedback_type" />

    <EditText
        android:id="@+id/field_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="4"
        android:hint="@string/feedback_hint_message"
        android:inputType="textMultiLine" />

    <LinearLayout 
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:id="@+id/button_send"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/feedback_button_send"/>
        <Button
            android:id="@+id/button_discard"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/feedback_button_discard"/>
        
    </LinearLayout>

</LinearLayout>
