<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dip"
    android:gravity="center_horizontal" >
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        
        <ImageView
            android:src="@mipmap/ic_launcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            >
            <TextView 
                android:textStyle="bold"
                android:text="@string/about_name"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
            <TextView 
                android:text="@string/about_version"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
            <TextView 
                android:text="@string/about_copyright"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
            <TextView 
                android:text="@string/about_website"
                android:autoLink="web"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
        </LinearLayout>
        
        
    </LinearLayout>
    <TextView 
        android:textColor="@android:color/secondary_text_dark"
        android:text="@string/about_description"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/about_thirdparty_button"
        android:text="@string/about_thirdparty_button"/>

</LinearLayout>
